--- a/modules/ve-mw/i18n/en.json
+++ b/modules/ve-mw/i18n/en.json
@@ -241,7 +241,9 @@
 	"visualeditor-formatdropdown-format-mw-heading5": "Sub-heading 3",
 	"visualeditor-formatdropdown-format-mw-heading6": "Sub-heading 4",
 	"visualeditor-languages-tool": "Languages",
-	"visualeditor-linkinspector-description-new-page": "Page does not exist yet",
+	"visualeditor-linkinspector-button-link-external": "External link",
+	"visualeditor-linkinspector-button-link-internal": "Search articles",
+	"visualeditor-linkinspector-description-new-page": "page does not exist yet",
 	"visualeditor-linkinspector-description-redirect": "redirect to $1",
 	"visualeditor-linkinspector-illegal-title": "Invalid page title",
 	"visualeditor-linknodeinspector-add-label": "Add label",
