--- a/modules/ve-mw/i18n/qqq.json
+++ b/modules/ve-mw/i18n/qqq.json
@@ -250,6 +250,8 @@
 	"visualeditor-formatdropdown-format-mw-heading5": "Item in the MediaWiki formatting dropdown for a level 5 heading (sub-section)\n{{Related|Visualeditor-formatdropdown}}",
 	"visualeditor-formatdropdown-format-mw-heading6": "Item in the MediaWiki formatting dropdown for a level 6 heading (sub-section)\n{{Related|Visualeditor-formatdropdown}}",
 	"visualeditor-languages-tool": "Tool for opening the languages links section of the meta dialog.\n{{Identical|Language}}",
+	"visualeditor-linkinspector-button-link-external": "Button label for entering an external link.",
+	"visualeditor-linkinspector-button-link-internal": "Button label for entering an internal link.",
 	"visualeditor-linkinspector-description-new-page": "Description label for a new page in the link inspector.",
 	"visualeditor-linkinspector-description-redirect": "Description label for a redirect in the link inspector.",
 	"visualeditor-linkinspector-illegal-title": "Warning that the entered text is not a valid page title.",
